// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dashboard > snapshot > matches loaded snapshot 1`] = `
<DocumentFragment>
  <div
    class="_dashboard_4b4f5e"
    data-testid="dashboard"
  >
    <header
      class="_header_4b4f5e"
    >
      <div>
        <h1
          class="_title_4b4f5e"
        >
          Salary Manager
        </h1>
        <p
          class="_subtitle_4b4f5e"
        >
          Employee Overview
        </p>
      </div>
      <button
        class="btn btn--primary"
      >
        + Add Employee
      </button>
    </header>
    <div
      class="_stats_4b4f5e"
      data-testid="stats-section"
    >
      <div
        class="_statCard_4b4f5e"
        data-testid="stat-card"
      >
        <span
          class="_statValue_4b4f5e"
        >
          —
        </span>
        <span
          class="_statLabel_4b4f5e"
        >
          Avg Salary
        </span>
      </div>
      <div
        class="_statCard_4b4f5e"
        data-testid="stat-card"
      >
        <span
          class="_statValue_4b4f5e"
        >
          —
        </span>
        <span
          class="_statLabel_4b4f5e"
        >
          Median Salary
        </span>
      </div>
      <div
        class="_statCard_4b4f5e"
        data-testid="stat-card"
      >
        <span
          class="_statValue_4b4f5e"
        >
          —
        </span>
        <span
          class="_statLabel_4b4f5e"
        >
          Min Salary
        </span>
      </div>
      <div
        class="_statCard_4b4f5e"
        data-testid="stat-card"
      >
        <span
          class="_statValue_4b4f5e"
        >
          —
        </span>
        <span
          class="_statLabel_4b4f5e"
        >
          Max Salary
        </span>
      </div>
      <div
        class="_statCard_4b4f5e"
        data-testid="stat-card"
      >
        <span
          class="_statValue_4b4f5e"
        >
          —
        </span>
        <span
          class="_statLabel_4b4f5e"
        >
          Countries
        </span>
      </div>
      <div
        class="_statCard_4b4f5e"
        data-testid="stat-card"
      >
        <span
          class="_statValue_4b4f5e"
        >
          —
        </span>
        <span
          class="_statLabel_4b4f5e"
        >
          Departments
        </span>
      </div>
    </div>
    <div
      class="_sectionHeader_4b4f5e"
    >
      <p
        class="_sectionTitle_4b4f5e"
      >
        Employees
      </p>
      <span
        class="_sectionCount_4b4f5e"
      >
        8
      </span>
    </div>
    <div
      class="_grid_4b4f5e"
      data-testid="employee-grid"
    >
      <div
        class="_card_bdb005"
        data-testid="employee-card"
        style="cursor: pointer;"
      >
        <button
          aria-label="Edit Alice Johnson"
          class="_editBtn_bdb005"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
            />
            <path
              d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
            />
          </svg>
        </button>
        <div
          class="_header_bdb005"
          data-testid="card-header"
        >
          <div
            class="_avatar_bdb005"
          >
            AJ
          </div>
          <div
            class="_headerInfo_bdb005"
          >
            <h3
              class="_name_bdb005"
            >
              Alice Johnson
            </h3>
            <p
              class="_jobTitle_bdb005"
            >
              Software Engineer
            </p>
          </div>
          <div
            data-testid="card-footer"
          >
            <span
              class="badge badge--full-time"
            >
              full-time
            </span>
          </div>
        </div>
      </div>
      <div
        class="_card_bdb005"
        data-testid="employee-card"
        style="cursor: pointer;"
      >
        <button
          aria-label="Edit Bob Smith"
          class="_editBtn_bdb005"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
            />
            <path
              d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
            />
          </svg>
        </button>
        <div
          class="_header_bdb005"
          data-testid="card-header"
        >
          <div
            class="_avatar_bdb005"
          >
            BS
          </div>
          <div
            class="_headerInfo_bdb005"
          >
            <h3
              class="_name_bdb005"
            >
              Bob Smith
            </h3>
            <p
              class="_jobTitle_bdb005"
            >
              Product Manager
            </p>
          </div>
          <div
            data-testid="card-footer"
          >
            <span
              class="badge badge--full-time"
            >
              full-time
            </span>
          </div>
        </div>
      </div>
      <div
        class="_card_bdb005"
        data-testid="employee-card"
        style="cursor: pointer;"
      >
        <button
          aria-label="Edit Clara Nguyen"
          class="_editBtn_bdb005"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
            />
            <path
              d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
            />
          </svg>
        </button>
        <div
          class="_header_bdb005"
          data-testid="card-header"
        >
          <div
            class="_avatar_bdb005"
          >
            CN
          </div>
          <div
            class="_headerInfo_bdb005"
          >
            <h3
              class="_name_bdb005"
            >
              Clara Nguyen
            </h3>
            <p
              class="_jobTitle_bdb005"
            >
              UX Designer
            </p>
          </div>
          <div
            data-testid="card-footer"
          >
            <span
              class="badge badge--full-time"
            >
              full-time
            </span>
          </div>
        </div>
      </div>
      <div
        class="_card_bdb005"
        data-testid="employee-card"
        style="cursor: pointer;"
      >
        <button
          aria-label="Edit David Müller"
          class="_editBtn_bdb005"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
            />
            <path
              d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
            />
          </svg>
        </button>
        <div
          class="_header_bdb005"
          data-testid="card-header"
        >
          <div
            class="_avatar_bdb005"
          >
            DM
          </div>
          <div
            class="_headerInfo_bdb005"
          >
            <h3
              class="_name_bdb005"
            >
              David Müller
            </h3>
            <p
              class="_jobTitle_bdb005"
            >
              Backend Developer
            </p>
          </div>
          <div
            data-testid="card-footer"
          >
            <span
              class="badge badge--contract"
            >
              contract
            </span>
          </div>
        </div>
      </div>
      <div
        class="_card_bdb005"
        data-testid="employee-card"
        style="cursor: pointer;"
      >
        <button
          aria-label="Edit Eva Martinez"
          class="_editBtn_bdb005"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
            />
            <path
              d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
            />
          </svg>
        </button>
        <div
          class="_header_bdb005"
          data-testid="card-header"
        >
          <div
            class="_avatar_bdb005"
          >
            EM
          </div>
          <div
            class="_headerInfo_bdb005"
          >
            <h3
              class="_name_bdb005"
            >
              Eva Martinez
            </h3>
            <p
              class="_jobTitle_bdb005"
            >
              Data Analyst
            </p>
          </div>
          <div
            data-testid="card-footer"
          >
            <span
              class="badge badge--part-time"
            >
              part-time
            </span>
          </div>
        </div>
      </div>
      <div
        class="_card_bdb005"
        data-testid="employee-card"
        style="cursor: pointer;"
      >
        <button
          aria-label="Edit Frank Lee"
          class="_editBtn_bdb005"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
            />
            <path
              d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
            />
          </svg>
        </button>
        <div
          class="_header_bdb005"
          data-testid="card-header"
        >
          <div
            class="_avatar_bdb005"
          >
            FL
          </div>
          <div
            class="_headerInfo_bdb005"
          >
            <h3
              class="_name_bdb005"
            >
              Frank Lee
            </h3>
            <p
              class="_jobTitle_bdb005"
            >
              DevOps Engineer
            </p>
          </div>
          <div
            data-testid="card-footer"
          >
            <span
              class="badge badge--full-time"
            >
              full-time
            </span>
          </div>
        </div>
      </div>
      <div
        class="_card_bdb005"
        data-testid="employee-card"
        style="cursor: pointer;"
      >
        <button
          aria-label="Edit Grace Patel"
          class="_editBtn_bdb005"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
            />
            <path
              d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
            />
          </svg>
        </button>
        <div
          class="_header_bdb005"
          data-testid="card-header"
        >
          <div
            class="_avatar_bdb005"
          >
            GP
          </div>
          <div
            class="_headerInfo_bdb005"
          >
            <h3
              class="_name_bdb005"
            >
              Grace Patel
            </h3>
            <p
              class="_jobTitle_bdb005"
            >
              HR Manager
            </p>
          </div>
          <div
            data-testid="card-footer"
          >
            <span
              class="badge badge--full-time"
            >
              full-time
            </span>
          </div>
        </div>
      </div>
      <div
        class="_card_bdb005"
        data-testid="employee-card"
        style="cursor: pointer;"
      >
        <button
          aria-label="Edit Henry Dubois"
          class="_editBtn_bdb005"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
            />
            <path
              d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
            />
          </svg>
        </button>
        <div
          class="_header_bdb005"
          data-testid="card-header"
        >
          <div
            class="_avatar_bdb005"
          >
            HD
          </div>
          <div
            class="_headerInfo_bdb005"
          >
            <h3
              class="_name_bdb005"
            >
              Henry Dubois
            </h3>
            <p
              class="_jobTitle_bdb005"
            >
              Frontend Developer
            </p>
          </div>
          <div
            data-testid="card-footer"
          >
            <span
              class="badge badge--contract"
            >
              contract
            </span>
          </div>
        </div>
      </div>
      <div
        class="_sentinel_4b4f5e"
      />
    </div>
    <div
      data-testid="analytics-panel"
    />
  </div>
</DocumentFragment>
`;

exports[`Dashboard > snapshot > matches loading snapshot 1`] = `
<DocumentFragment>
  <div
    class="_dashboard_4b4f5e"
    data-testid="dashboard"
  >
    <header
      class="_header_4b4f5e"
    >
      <div>
        <h1
          class="_title_4b4f5e"
        >
          Salary Manager
        </h1>
        <p
          class="_subtitle_4b4f5e"
        >
          Employee Overview
        </p>
      </div>
      <button
        class="btn btn--primary"
      >
        + Add Employee
      </button>
    </header>
    <div
      class="_stats_4b4f5e"
      data-testid="stats-section"
    >
      <div
        class="_statCard_4b4f5e"
        data-testid="stat-card"
      >
        <span
          class="_statValue_4b4f5e"
        >
          —
        </span>
        <span
          class="_statLabel_4b4f5e"
        >
          Avg Salary
        </span>
      </div>
      <div
        class="_statCard_4b4f5e"
        data-testid="stat-card"
      >
        <span
          class="_statValue_4b4f5e"
        >
          —
        </span>
        <span
          class="_statLabel_4b4f5e"
        >
          Median Salary
        </span>
      </div>
      <div
        class="_statCard_4b4f5e"
        data-testid="stat-card"
      >
        <span
          class="_statValue_4b4f5e"
        >
          —
        </span>
        <span
          class="_statLabel_4b4f5e"
        >
          Min Salary
        </span>
      </div>
      <div
        class="_statCard_4b4f5e"
        data-testid="stat-card"
      >
        <span
          class="_statValue_4b4f5e"
        >
          —
        </span>
        <span
          class="_statLabel_4b4f5e"
        >
          Max Salary
        </span>
      </div>
      <div
        class="_statCard_4b4f5e"
        data-testid="stat-card"
      >
        <span
          class="_statValue_4b4f5e"
        >
          —
        </span>
        <span
          class="_statLabel_4b4f5e"
        >
          Countries
        </span>
      </div>
      <div
        class="_statCard_4b4f5e"
        data-testid="stat-card"
      >
        <span
          class="_statValue_4b4f5e"
        >
          —
        </span>
        <span
          class="_statLabel_4b4f5e"
        >
          Departments
        </span>
      </div>
    </div>
    <div
      class="_sectionHeader_4b4f5e"
    >
      <p
        class="_sectionTitle_4b4f5e"
      >
        Employees
      </p>
    </div>
    <p
      class="_loading_4b4f5e"
    >
      Loading employees…
    </p>
    <div
      data-testid="analytics-panel"
    />
  </div>
</DocumentFragment>
`;
